--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,17 +22,14 @@ body{
 
   #principal-menu ul a {
     color: black;
-    margin-left: 1rem;
-    font-size: 1.1rem;
-    
-   
-   
+    margin-left: 0.5rem;
+    font-size: 1.05rem;
    }
   
   #principal-menu ul a:hover,
   #principal-menu ul li.active a {
     color: steelblue  ;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
   }
 
   #Carrousel{
@@ -57,7 +54,6 @@ body{
     height: 100vh;
   }
   
-  
   #principal-menu {
     -webkit-box-flex: 1;
         -ms-flex: 1 1 100%;
@@ -71,7 +67,7 @@ body{
   #principal-menu ul a {
     display: block;
     padding: .5em 0;
-    text-align: right;
+    text-align: center;
     color: #111111;
     
     border-top: 0.1px solid #111111;
@@ -79,7 +75,7 @@ body{
   
   #principal-menu ul a:hover,
   #principal-menu ul li.active a {
-    color: lightsteelblue; }
+    color: #23A988; }
 
   @media (min-width: 768px) {
     #principal-menu {
@@ -90,7 +86,7 @@ body{
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
-      margin: 0 0 0 0;
+      margin: 0;
       -webkit-box-pack: flex-end;
           -ms-flex-pack: flex-end;
               justify-content: flex-end; }
@@ -98,7 +94,7 @@ body{
     #principal-menu ul li a {
       padding: .2rem;
       text-transform: none;
-      margin: 0 1rem;
+      margin: 0 0.4rem;
       border-top: 0;
       color: #111111;
 
@@ -107,6 +103,6 @@ body{
   
     #principal-menu ul li.active a,
     #principal-menu ul li a:hover {
-      color:lightsteelblue;
+      color:#23A988;
        }
     }
